# Jetson-Nano

./: CMakeLists.txt  CMakeLists.txt.jetson-nano  CMakeListsJetson.txt  CMakeListsUbuntu.txt  Makefile  README.md  buffer.cpp  cmake_install.cmake  example-app.cpp  input_test  model.cpp  svm_cv.cpp  tensor.cpp  test  test.cpp  test_predict.cpp
Data/: labels.txt  names.txt  paths.txt  svm.model
src/: dir.cpp  directory.cpp  test.cpp  test_train.cpp  window.cpp
